--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "amata-global",
   "version": "0.0.1",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --mode=development",
+    "watch": "webpack watch --mode=development",
     "build": "webpack --mode=production --progress"
   },
   "repository": {
