--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.9.1",
+    "daisyui": "^4.7.2",
     "html-bundler-webpack-plugin": "^3.4.11",
     "nunjucks": "^3.2.4",
     "postcss": "^8.4.33",
