--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "webpack": "^5.90.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "@fontsource-variable/roboto-condensed": "^5.0.2"
   }
 }
