--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "css-loader": "^6.9.1",
     "daisyui": "^4.7.2",
     "html-bundler-webpack-plugin": "^3.4.11",
